--- a/website/src/theme/_smui-theme.scss
+++ b/website/src/theme/_smui-theme.scss
@@ -1,52 +1,27 @@
-// Import the mixins.
-@use '@material/typography/index' as typography;
+@use 'sass:color';
 
-html {
-  @include typography.typography('body1');
+@use '@material/theme/color-palette';
+
+// Svelte Colors!
+@use '@material/theme/index' as theme with (
+  $primary: #1f8c4e,
+  $secondary: #676778,
+  $surface: #fff,
+  $background: #fff,
+  $error: color-palette.$red-900
+);
+
+html,
+body {
+  background-color: theme.$surface;
+  color: theme.$on-surface;
+  font-family: var(--mdc-text-button-label-text-font,var(--mdc-typography-button-font-family,var(--mdc-typography-font-family, Roboto,)));
+
 }
 
-h1 {
-  @include typography.typography('headline1');
+a {
+  color: #40b3ff;
 }
-
-h2 {
-  @include typography.typography('headline2');
-}
-
-h3 {
-  @include typography.typography('headline3');
-}
-
-h4 {
-  @include typography.typography('headline4');
-}
-
-h5 {
-  @include typography.typography('headline5');
-}
-
-h6 {
-  @include typography.typography('headline6');
-}
-
-caption {
-  @include typography.typography('caption');
-}
-
-code,
-pre {
-  font-family: 'Roboto Mono', monospace;
-}
-
-small {
-  font-size: 0.9em;
-}
-
-big {
-  font-size: 1.1em;
-}
-
-b,
-strong {
-  font-weight: bold;
+a:visited {
+  color: color.scale(#40b3ff, $lightness: -35%);
 }
