--- a/website/src/theme/_smui-theme.scss
+++ b/website/src/theme/_smui-theme.scss
@@ -4,7 +4,7 @@
 
 // Svelte Colors!
 @use '@material/theme/index' as theme with (
-  $primary: #1f8c4e,
+  $primary: #0b7c3c,
   $secondary: #676778,
   $surface: #fff,
   $background: #fff,
