--- a/website/src/app.css
+++ b/website/src/app.css
@@ -1,5 +1,3 @@
-.center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
