--- a/website/src/app.css
+++ b/website/src/app.css
@@ -1,3 +1,16 @@
+/* https://tailwindcss.com/docs/installation */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
 @import 'tailwindcss';
 
 
